[metadata]
name = drbot-reddit
version = attr: drbot.__version__
author = c0d3rman
description = DrBot - A modular Reddit bot to cure your moderation woes.
long_description = file: README.md
long_description_content_type = text/markdown
license = CC BY-SA 4.0
license_files = LICENSE
url = https://github.com/c0d3rman/DrBot
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: Free To Use But Restricted
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications
    Typing :: Typed

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    praw
    prawcore
    schedule
    tomlkit
    python_dateutil
    dynaconf
    Requests
    pytimeparse
    openai

[options.packages.find]
where=src
